--- a/index.html
+++ b/index.html
@@ -9,23 +9,18 @@
 	<header>
 		<h1>State Capital Flashcards</h1>
     </header>
+    <h2>Hover over a state to reveal answers</h2>
     <div class="flexcontainer">
-	    <h2> 1. </h2>
 	    <!--Alabama-->
 	    <a href="#"><img src="images/alabama.jpeg" alt="alabama" onmouseover="alert('Alabama - Mongomery');"></a>
-	    <h2> 2. </h2>
 	    <!--Alaska-->
 	    <a href="#"><img src="images/alaska.jpeg" alt="alaska" onmouseover="alert('Alaska - Juneau');"></a>
-	    <h2> 3. </h2>
 	    <!--Arizona-->
 	    <a href="#"><img src="images/arizona.jpeg" alt="arizona" onmouseover="alert('Arizona - Phoenix');"></a>
-	    <h2> 4. </h2>
 	    <!--Arkansas-->
 	    <a href="#"><img src="images/arkansas.jpeg" alt="arkansas" onmouseover="alert('Arkansas - Little Rock');"></a>
-	    <h2> 5. </h2>
 	    <!--California-->
 	    <a href="#"><img src="images/california.jpeg" alt="california" onmouseover="alert('California - Sacramento');"></a>
-	    <h2> 6. </h2>
 	    <!--Denver-->
 	    <a href="#"><img src="images/colorado.jpg" alt="colorado" onmouseover="alert('Colorado - Denver');"></a>
    </div>
